--- a/uart_exti.ioc
+++ b/uart_exti.ioc
@@ -5,14 +5,15 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART1
+Mcu.IP3=UART5
 Mcu.IPNb=4
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA9
-Mcu.Pin1=PA10
-Mcu.Pin2=VP_SYS_VS_Systick
-Mcu.PinsNb=3
+Mcu.Pin0=PA5
+Mcu.Pin1=PC12
+Mcu.Pin2=PD2
+Mcu.Pin3=VP_SYS_VS_Systick
+Mcu.PinsNb=4
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
 MxCube.Version=4.23.0
@@ -27,10 +28,13 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false
-PA10.Locked=true
-PA10.Signal=GPXTI10
-PA9.Mode=Half_duplex(single_wire_mode)
-PA9.Signal=USART1_TX
+PA5.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+PA5.GPIO_Label=Led
+PA5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PC12.Mode=Asynchronous
+PC12.Signal=UART5_TX
 PCC.Checker=false
 PCC.Line=STM32F446
 PCC.MCU=STM32F446R(C-E)Tx
@@ -39,6 +43,8 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=null
+PD2.Mode=Asynchronous
+PD2.Signal=UART5_RX
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -64,7 +70,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART1_UART_Init-USART1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_UART5_Init-UART5-false-HAL
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=32000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -110,10 +116,9 @@ RCC.VCOOutputFreq_Value=128000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
-SH.GPXTI10.0=GPIO_EXTI10
-SH.GPXTI10.ConfNb=1
-USART1.IPParameters=VirtualMode
-USART1.VirtualMode=VM_ASYNC
+UART5.BaudRate=9600
+UART5.IPParameters=VirtualMode,BaudRate
+UART5.VirtualMode=Asynchronous
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F446RE
